<resources>
    <string name="app_name">Always Fish</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_boast">Boast</string>
    <string name="nav_item_notice">Notice</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Always Fish</string>
    <string name="second_activity_text">secondView</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
