<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_login"
            android:checked="true"
            android:icon="@drawable/basket"
            android:title="@string/nav_item_login" />
        <item
            android:id="@+id/navigation_item_boast"
            android:icon="@drawable/basket"
            android:title="@string/nav_item_boast" />
        <item
            android:id="@+id/navigation_item_notice"
            android:icon="@drawable/basket"
            android:title="@string/nav_item_notice" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/basket"
                android:id="@+id/nav_sub_menu_item01"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/basket"
                android:id="@+id/nav_sub_menu_item02"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>
</menu>